# dscim-new

./: .gitignore  .readthedocs.yml  README.md  environment.yml  mkdocs.yml  pyproject.toml
docs/: index.md  requirements.txt
docs/about/: status.md
docs/api/: configuration.md  core.md  pipeline.md
docs/css/: custom.css
docs/developer/: comparison.md  pending.md
docs/examples/: complete-workflow.md  integration-replication.md
docs/getting-started/: installation.md  overview.md  quickstart.md
docs/user-guide/: architecture.md  configuration.md
dscim_new/config/: __init__.py  data_generation_config.py  schemas.py
dscim_new/config/conf/: config.yaml
dscim_new/config/conf/computation/: default.yaml
dscim_new/config/conf/data_generation/: default.yaml  testing.yaml
dscim_new/config/conf/testing/: default.yaml
dscim_new/core/: __init__.py  damage_functions.py  damage_reduction.py  discounting.py  equity.py  scc.py  scc_calculation.py  utils.py
dscim_new/data/: hydra_generator.py  standalone_generator.py  synthetic_data.py
dscim_new/io/: __init__.py  climate_io.py  config.py  damage_function_io.py  loaders.py  naming.py  scc_io.py  writers.py
dscim_new/pipeline/: __init__.py  base.py  orchestrator.py  resources.py  steps.py
dscim_new/preprocessing/: __init__.py  consumption.py  damage_functions.py  damages.py  reduce_damages_pipeline.py  scc.py
dscim_new/resources/: __init__.py  data_providers.py
dscim_new/utils/: __init__.py  synthetic_climate.py  synthetic_damages.py
examples/: full_pipeline_example.py  run_integration_results_replication.py  validate_against_original.py
examples/configs/: dummy_config.yaml  full_config.yaml  minimal_config.yaml
examples/notebooks/: comparison.ipynb  full_sccs.ipynb  last-comparison.ipynb  last_example.ipynb
examples/notebooks/workflow_output/climate_data/coastal_gmsl.zarr/gmsl/: zarr.json
examples/notebooks/workflow_output/damage_functions/not_coastal/2020/damage_function_coefficients.zarr/: zarr.json
examples/notebooks/workflow_output/damages_data/econ/integration-econ.zarr/: zarr.json
examples/notebooks/workflow_output/damages_data/sectoral/coastal_damages.zarr/: zarr.json
examples/notebooks/workflow_output/damages_data/sectoral/coastal_damages.zarr/slr/: zarr.json
examples/notebooks/workflow_output/reduced_damages/not_coastal/adding_up_cc_reduced_damages.zarr/: zarr.json
examples/notebooks/workflow_output/reduced_damages/not_coastal/adding_up_no_cc_reduced_damages.zarr/: zarr.json
examples/notebooks/workflow_output/reduced_damages/not_coastal/equity_cc_eta2.0_reduced_damages.zarr/: zarr.json
examples/notebooks/workflow_output/reduced_damages/not_coastal/equity_no_cc_eta2.0_reduced_damages.zarr/: zarr.json
examples/notebooks/workflow_output/reduced_damages/not_coastal/risk_aversion_cc_eta2.0_reduced_damages.zarr/: zarr.json
examples/notebooks/workflow_output/reduced_damages/not_coastal/risk_aversion_no_cc_eta2.0_reduced_damages.zarr/: zarr.json
examples/scripts/: compare_outputs.py  full_pipeline_example.py  gen_synthetic_data.py  reproduce_integration_result.py  run_ssps_example.py  simple_run_ssps.py  test_discount_type_dimension.py  test_rolling_window.py
examples/scripts/examples/workflow_output/climate_data/: GMTanom_all_temp.csv  conversion.nc4  scenario_gmsl.nc4
examples/scripts/examples/workflow_output/simple_example/climate_data/: ar6_fair162_sim.nc
examples/scripts/examples/workflow_output/simple_example/damage_functions/: example_2020_points.csv  example_2020_summary.json
examples/scripts/examples/workflow_output/simple_example/scc_results/: example_2020_constant_dr0.02_quantiles.csv  example_2020_constant_dr0.02_summary.json  example_2020_ramsey_eta1.45_rho0.001_quantiles.csv  example_2020_ramsey_eta1.45_rho0.001_summary.json
(+1270 files in other folders)
